--- a/rulesets.d/example.yml
+++ b/rulesets.d/example.yml
@@ -13,3 +13,14 @@ Some Other Ruleset Name:
   match: True
   metadata_postprocessing:
     title: '{{created_year}}-{{created_month}}-{{created_day}} -- {{correspondent}} -- {{document_type}}'
+---
+Parse creation date from filename:
+  # Matches all documents with a title starting with a date in iso format followed by a space
+  # title: "2020-01-31 important document"
+  match: '{{ title | regex_match("\d{4}-\d\d-\d\d ") }}'
+  metadata_postprocessing:
+    title_old:     '{{ title }}' # saved as temporary value
+    title:         '{{ title_old | regex_sub("^(?P<created_year>\d{4})-(?P<created_month>\d{2})-(?P<created_day>\d{2}) (?P<title>.*)$", "\g<title>") }}'
+    created_year:  '{{ title_old | regex_sub("^(?P<created_year>\d{4})-(?P<created_month>\d{2})-(?P<created_day>\d{2}) (?P<title>.*)$", "\g<created_year>") }}'
+    created_month: '{{ title_old | regex_sub("^(?P<created_year>\d{4})-(?P<created_month>\d{2})-(?P<created_day>\d{2}) (?P<title>.*)$", "\g<created_month>") }}'
+    created_day:   '{{ title_old | regex_sub("^(?P<created_year>\d{4})-(?P<created_month>\d{2})-(?P<created_day>\d{2}) (?P<title>.*)$", "\g<created_day>") }}'
