--- a/rulesets.d/example.yml
+++ b/rulesets.d/example.yml
@@ -25,3 +25,11 @@ Parse creation date from filename:
     created_month: '{{ title_old | regex_sub("^(?P<created_year>\d{4})-(?P<created_month>\d{2})-(?P<created_day>\d{2}) (?P<title>.*)$", "\g<created_month>") }}'
     created_day:   '{{ title_old | regex_sub("^(?P<created_year>\d{4})-(?P<created_month>\d{2})-(?P<created_day>\d{2}) (?P<title>.*)$", "\g<created_day>") }}'
   validation_rule: '{{ num_documents(correspondent=correspondent, document_type=document_type, created_date_object=created_date_object) == 1 }}'
+  # Matches always
+  # Extracts a titel of the document using AI (For now only Ollama)
+AI Ruleset:
+  match: True
+  prompts:
+    ai_title: "{{Extract the title from the document}}"
+  metadata_postprocessing:
+    title: '{{ai_title}}'
